--- a/SortApp/templates/SortApp/search.html
+++ b/SortApp/templates/SortApp/search.html
@@ -48,7 +48,7 @@
       <div class="d-flex justify-content-center align-items-center h-100">
         <div class="text-white">
           <h1 class="mb-3">Code Region</h1>
-          <h5 class="mb-4">Best & free guide of responsive web design</h5>
+          <h5 class="mb-4">Clear your concept with us</h5>
           <form method="GET" action="{% url 'linearview' %}">
 		  <button
             class="btn btn-outline-light btn-lg m-2"
