--- a/SortApp/templates/SortApp/insertion/insertionview.html
+++ b/SortApp/templates/SortApp/insertion/insertionview.html
@@ -201,7 +201,7 @@ text-transform:uppercase;
       <div id="section4">    
       <p id="title">Flowchart : </p>  <br>    
       <div >
-        <img src={% static ".png" %}>
+        <img src={% static "insertion.png" %}>
       </div>
       </div>
       <div id="section5">  
