--- a/SortApp/templates/SortApp/selection/selectionview.html
+++ b/SortApp/templates/SortApp/selection/selectionview.html
@@ -208,7 +208,7 @@ text-transform:uppercase;
       <div id="section4">    
       <p id="title">Flowchart : </p>  <br>    
       <div >
-        <img src={% static ".png" %}>
+        <img src={% static "selection.png" %}>
       </div>
       </div>
       <div id="section5">  
